# SpatialWarp

./: .gitignore  README.md  pyproject.toml
examples/: l12_walkthrough.ipynb  landmarks_L12.csv  registration_L12.affine.tfm  registration_L12.bspline.tfm  transformed_coordinates_L12_lipid.csv  transformed_coordinates_L12_metabo.csv  tutorial.ipynb  tutorial_registration.affine.tfm  tutorial_registration.bspline.tfm
examples/msi/: README.md  build_msi_spatialdata.py  msi_loader.py
spatialwarp/: __init__.py  bunwarp.py  grid_align.py  landmark_picker.py  matching.py  pipeline.py  qc.py  registration.py
