[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialwarp"
version = "0.1.0"
description = "Technology-agnostic alignment of spatial datasets: grid self-alignment and SimpleITK-based elastic cross-modality registration."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "anndata",
    "spatialdata",
    "matplotlib",
    "SimpleITK",
]

[project.optional-dependencies]
examples = [
    "geopandas",
    "shapely",
    "imageio",
    "spatialdata-io",
]

[tool.setuptools.packages.find]
include = ["spatialwarp*"]
